--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ nav{
 
 .service_txt h1{
     font-size: 35px;
-    color: #242424;
+    color:#FA4B10;
     font-weight: bold;
     letter-spacing: 2px;  
 }
