--- a/css/shop.css
+++ b/css/shop.css
@@ -2,62 +2,58 @@
     margin: 0;
     padding: 0;
 }
-.service-bg {
-    width: 100%;
-    height: 800px;
-    padding: 0 0 100px 0;
-    background: #f8f8f8;
+body{
+    background-color: #0955b2;
 }
 
-
-.service-bg .service-content {
-    height: 800px;
-    width: 1200px;
-    margin: 0 auto;
-}
-
-.service-bg .service-content .service-heading {
-    width: 100%;
-    height: 200px;
-    text-align: center;
-}
-
-
-.service-bg .service-content .service-heading p {
-    font-size: 30px;
-    color: #0955b2;
-    text-transform: uppercase;
-}
-
-.service-bg .service-content .service-heading h3 {
-    color: #000;
-    font-size: 60px;
-}
-
-.service-bg .service-content .service-item-content {
-    width: 100%;
+.main_box{
+    margin:auto;
+    width: 800px;
     height: 600px;
-    
+    display: flex;
+    background-color: aqua;
+
+}
+.box_one {
+    width: 50%;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    box-sizing: border-box;
+    background-color: whitesmoke;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-.service-bg .service-content .service-item-content .service-item {
-    float: left;
-    margin: 10px;
-    width: 380px;
-    height: 280px;
+span{
+    background-color: black;
+    width: 100px;
+    color: aliceblue;
     text-align: center;
-    background: rgba(187, 190, 186, 0.29);
-}
-
-.service-bg .service-content .service-item-content .service-item h4 {
-    font-size: 30px;
-    text-transform: uppercase;
-    padding: 60px 20px 0px 20px;
-    
+    border-radius: 6px;
 
 }
 
-.service-bg .service-content .service-item-content .service-item p {
-    text-transform: none;
-    padding: 20px 50px 0px 50px;
+h1{
+    margin-top: 10px;
 }
+
+p{
+    margin-top: 10px;
+}
+.box_two{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    background-color: #0955b2;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+   
+   
+}
+
