--- a/css/mobile-shop.css
+++ b/css/mobile-shop.css
@@ -14,7 +14,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #19A7CE;
+/*     background-color: #19A7CE; */
 
 }
 
